renamed html file with "home" to "index"

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             </a>
       
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-              <li><a href="home.html" class="nav-link px-2 text-white">Home</a></li>
+              <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
               <li><a href="features.html" class="nav-link px-2 text-white">Features</a></li>
               <li><a href="places.html" class="nav-link px-2 text-white">Places</a></li>
               <li><a href="faqs.html" class="nav-link px-2 text-white">FAQs</a></li>
