added: app.js , signin.html, signup.html, linked all html file app.js

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </form>
       
             <div class="text-end">
-              <button type="button" class="btn btn-outline-light me-2">Login</button>
-              <button type="button" class="btn btn-warning">Sign-up</button>
+              <button type="button" class="btn btn-outline-light me-2" id="btn-login-form">Login</button>
+              <button type="button" class="btn btn-warning" id="btn-register-form">Sign-up</button>
             </div>
           </div>
         </div>
@@ -105,5 +105,8 @@
           </div>
         </div>
       </div>
+
+      <!--Scripts-->
+      <script src="assets/js/app.js"></script>
 </body>
 </html>
