--- a/faqs.html
+++ b/faqs.html
@@ -29,11 +29,14 @@
             </form>
       
             <div class="text-end">
-              <button type="button" class="btn btn-outline-light me-2">Login</button>
-              <button type="button" class="btn btn-warning">Sign-up</button>
+              <button type="button" class="btn btn-outline-light me-2" id="btn-login-form">Login</button>
+              <button type="button" class="btn btn-warning" id="btn-register-form">Sign-up</button>
             </div>
           </div>
         </div>
       </header>
+
+      <!--Scripts-->
+      <script src="assets/js/app.js"></script>
 </body>
 </html>
