added new web-pages, integration aos-animation

--- a/faqs.html
+++ b/faqs.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="assets/images/logo.jpg" type="image/x-icon">
+    <link rel="stylesheet" href="assets/css/blocks/faqs.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>FAQs</title>
 </head>
 <body>
@@ -36,7 +38,27 @@
         </div>
       </header>
 
+      <div class="container">
+        <p>
+          <h1 align="center" class="faqs-item" data-aos="fade-down" data-aos-duration="1000">FAQs</h1>
+          <h5 data-aos="fade-up" data-aos-duration="1500">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quod iure deleniti? Reiciendis inventore iste laboriosam facilis qui dolorem perspiciatis obcaecati iusto ex quibusdam! Consectetur exercitationem inventore dolor iusto tempora?
+            Voluptatum perspiciatis ullam corporis eligendi doloribus minima natus similique laudantium deserunt ex aliquam maiores recusandae, pariatur amet cumque! Quam, dignissimos. Illum, sequi soluta eligendi ex magnam delectus nihil rerum pariatur?
+            Saepe ipsum impedit odit aliquam laudantium facere voluptatibus voluptatem necessitatibus veniam odio illo, delectus fugiat debitis deserunt placeat nobis et! Eligendi atque repellendus hic rerum ad et praesentium debitis quaerat?
+            Id, quisquam temporibus delectus saepe, hic tempora consectetur quia ad fuga ut fugit beatae tempore in aliquam necessitatibus eaque minima labore. Placeat libero odit blanditiis praesentium! Quo iure sed impedit!
+            Cumque cum nesciunt, eligendi ratione sunt earum, velit possimus inventore nihil dolores tempora doloribus optio. Eaque, similique cupiditate eligendi quos eos recusandae ipsam perferendis, tenetur ea omnis, soluta quae. Dignissimos.
+            Doloremque dignissimos aliquid, placeat delectus sapiente vitae dolore eos officiis maxime beatae cumque, numquam rem repudiandae perspiciatis explicabo voluptatem aut hic quasi! Voluptatem, nam. Doloribus maxime suscipit harum ut quasi?
+            Veritatis, accusamus! Eius commodi, quidem soluta ab excepturi modi vitae optio eum nihil, sed ad? Assumenda ab dicta cupiditate sit dolor odio ipsum iure. Quasi harum obcaecati voluptas sint culpa.
+            Sapiente dolorem quidem atque, ullam qui dicta eos. Exercitationem, tempora. Nesciunt voluptatem, voluptas debitis nulla dolor quas. Deserunt quas reiciendis, sequi porro eum est tempore incidunt repellendus reprehenderit deleniti ad!
+            Atque nobis eum minima. Vero amet id repellendus, molestias fugiat rerum deleniti eos corrupti debitis ullam voluptate, iusto nam. Maiores, enim sit quis rerum quos eveniet obcaecati deserunt exercitationem explicabo?
+            Ut dignissimos consectetur quam magnam! Maiores modi rerum architecto cum quos labore harum libero? Similique sed voluptate repellat, exercitationem dolor fugiat adipisci rerum, a rem ea voluptas perspiciatis nihil quibusdam?
+          <h2>
+        </p>
+      </div>
+
       <!--Scripts-->
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script src="assets/js/aos.js"></script>
       <script src="assets/js/app.js"></script>
 </body>
 </html>
