--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="assets/images/logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/blocks/about.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>About</title>
 </head>
 <body>
@@ -40,8 +41,8 @@
       <div class="container p-3 text-black">
         <div class="info about">
           <p>
-            <h2>About</h2>
-            <h5>Add some information about the album below, the author, 
+            <h2 data-aos="fade-down" data-aos-duration="3000">About</h2>
+            <h5 data-aos="fade-right" data-aos-duration="3000">Add some information about the album below, the author, 
               or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. 
               Then, link them off to some social networking sites or contact information.
             </h5>
@@ -50,8 +51,8 @@
 
         <div class="info contact">
           <p>
-            <h2>Contact</h2>
-            <h5>Add some information about the album below, the author, 
+            <h2 data-aos="fade-down" data-aos-duration="3000">Contact</h2>
+            <h5 data-aos="fade-left" data-aos-duration="3000">Add some information about the album below, the author, 
               or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. 
               Then, link them off to some social networking sites or contact information.</h5>
           </p>
@@ -59,8 +60,8 @@
 
         <div class="info terms">
           <p>
-            <h2>Terms</h2>
-            <h5>Add some information about the album below, the author, 
+            <h2 data-aos="fade-down" data-aos-duration="3000">Terms</h2>
+            <h5 data-aos="fade-right" data-aos-duration="3000">Add some information about the album below, the author, 
               or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. 
               Then, link them off to some social networking sites or contact information.</h5>
           </p>
@@ -68,8 +69,8 @@
 
         <div class="info privacy&policy">
           <p>
-            <h2>Privacy & Policy</h2>
-            <h5>Add some information about the album below, the author, 
+            <h2 data-aos="fade-down" data-aos-duration="3000">Privacy & Policy</h2>
+            <h5 data-aos="fade-left" data-aos-duration="3000">Add some information about the album below, the author, 
               or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. 
               Then, link them off to some social networking sites or contact information.</h5>
           </p>
@@ -77,6 +78,8 @@
       </div>
 
       <!--Scripts-->
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+      <script src="assets/js/aos.js"></script>
       <script src="assets/js/app.js"></script>
 </body>
 </html>
