--- a/signin.html
+++ b/signin.html
@@ -30,9 +30,12 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+        <button class="w-100 btn btn-lg btn-primary" id="btn-sign-in" type="submit">Sign in</button>
         <p class="mt-5 mb-3 text-muted">© 2021</p>
       </form>
     </main>
+
+    <!--Scripts-->
+    <script src="assets/js/singIn.js"></script>
 </body>
 </html>
