--- a/signup.html
+++ b/signup.html
@@ -34,9 +34,12 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
+        <button class="w-100 btn btn-lg btn-primary" id="btn-sign-up" type="submit">Sign up</button>
         <p class="mt-5 mb-3 text-muted">© 2021</p>
       </form>
     </main>
+
+    <!--Scripts-->
+    <script src="assets/js/signUp.js"></script>
 </body>
 </html>
