--- a/Logging&Registration/about.html
+++ b/Logging&Registration/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/assets/images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/logo.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/blocks/about.css">
+    <link rel="stylesheet" href="../assets/css/blocks/about.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>About</title>
 </head>
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-          <img class="bi me-2" width="40" height="40" src="/assets/images/logo.jpg"></img>
+          <img class="bi me-2" width="40" height="40" src="../assets/images/logo.jpg"></img>
         </a>
   
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -32,7 +32,7 @@
   
         <div class="dropdown text-end">
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="/assets/images/logo.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+            <img src="../assets/images/logo.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
           </a>
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
             <li><a class="dropdown-item" href="#">New project...</a></li>
@@ -87,6 +87,6 @@
 
   <!--Scripts-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="/assets/js/aos.js"></script>
+  <script src="../assets/js/aos.js"></script>
 </body>
 </html>
