--- a/Logging&Registration/index.html
+++ b/Logging&Registration/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="shortcut icon" href="/assets/images/logo.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/images/logo.jpg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/blocks/news.css">
+    <link rel="stylesheet" href="../assets/css/blocks/news.css">
     <title>Home</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-          <img class="bi me-2" width="40" height="40" src="/assets/images/logo.jpg"></img>
+          <img class="bi me-2" width="40" height="40" src="../assets/images/logo.jpg"></img>
         </a>
   
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
@@ -32,7 +32,7 @@
   
         <div class="dropdown text-end">
           <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
-            <img src="/assets/images/logo.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
+            <img src="../assets/images/logo.jpg" alt="mdo" width="32" height="32" class="rounded-circle">
           </a>
           <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
             <li><a class="dropdown-item" href="#">New project...</a></li>
@@ -51,12 +51,12 @@
   
     <div class="row row-cols-3 align-items-stretch py-5">
       <div class="col" data-aos="flip-up" data-aos-duration="1200">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('/assets/images/restoran.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('../assets/images/restoran.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Shalfei</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
-                <img src="/assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                <img src="../assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
               </li>
               <li class="d-flex align-items-center me-3">
                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -72,12 +72,12 @@
       </div>
   
       <div class="col" data-aos="flip-up" data-aos-duration="1200">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('/assets/images/restoran5.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('../assets/images/restoran5.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Gold chaha</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
-                <img src="/assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                <img src="../assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
               </li>
               <li class="d-flex align-items-center me-3">
                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -93,12 +93,12 @@
       </div>
   
       <div class="col" data-aos="flip-up" data-aos-duration="1200">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('/assets/images/restoran6.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('../assets/images/restoran6.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Charmander & Picachu</h2>
             <ul class="d-flex list-unstyled mt-auto">
               <li class="me-auto">
-                <img src="/assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
+                <img src="../assets/images/logo.jpg" alt="Bootstrap" width="32" height="32" class="rounded-circle border border-white">
               </li>
               <li class="d-flex align-items-center me-3">
                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill"></use></svg>
@@ -168,6 +168,6 @@
 
   <!--Scripts-->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="/assets/js/aos.js"></script>
+  <script src="../assets/js/aos.js"></script>
 </body>
 </html>
