--- a/Logging&Registration/index.html
+++ b/Logging&Registration/index.html
@@ -22,7 +22,7 @@
           <li><a href="index.html" class="nav-link px-2 text-secondary">Home</a></li>
           <li><a href="places.html" class="nav-link px-2 text-white">Places</a></li>
           <li><a href="products.html" class="nav-link px-2 text-white">Products</a></li>
-          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>
+<!--          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>-->
           <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
   
@@ -116,7 +116,7 @@
   </div>
 
   <!-- News-posts -->
-  <div class="container py-5" id="custom-cards">
+  <div class="container py-5" id="custom-card">
     <h2 class="pb-2 border-bottom">News</h2>
   </div>
   <!-- /News-post -->
@@ -126,11 +126,11 @@
 
     <div class="row featurette">
       <div class="col-md-7 order-md-2" data-aos="fade-left" data-aos-duration="1000">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Новые десерты. <span class="text-muted">рекомендуется</span></h2>
+        <p class="lead">Новые десерты в «Печорине», греческие завтраки в Eva, израильское кафе Dizengof99 в «Красной стреле»</p>
       </div>
       <div class="col-md-5 order-md-1" data-aos="fade-right" data-aos-duration="1000">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="https://img.the-village.ru/4PodKxbVe1zUISQijd_S2CDwKjhl4QKm3-6lCD0V_Cs/rs:fill:940:630/q:88/plain/2020/11/12/940118617490_2407703726192719_8002059691960714473_o.jpg" width="500px" height="350px">
       </div>
     </div>
 
@@ -138,12 +138,11 @@
 
     <div class="row featurette">
       <div class="col-md-7" data-aos="fade-right" data-aos-duration="1000">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+        <h2 class="featurette-heading">Kitchen & Bar Little Garden <span class="text-muted">новое</span></h2>
+        <p class="lead">В районе Чистых прудов открылся двухэтажный ресторан-оранжерея Little Garden. Шеф-поваром здесь стал Константин Цегоев, который придумал для заведения авторское меню с уклоном в средиземноморскую кухню. Свежая рыба, мясо, интересные сочетания, сезонные продукты и авторские соусы — основа концепции кухни. О барной карте тоже позаботились, шеф-бармен Виталий Скрипчинский придумал для Little Garden более 20 авторских коктейлей, хотя, конечно, классику, здесь тоже могут смешать.</p>
       </div>
       <div class="col-md-5" data-aos="fade-left" data-aos-duration="500">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+        <img src="https://cdn.the-village.ru/the-village.ru/post_image-image/Dc3TL7zu-auN9IpnkPvZAg.jpg" width="500px" height="350px">
       </div>
     </div>
 
@@ -152,11 +151,11 @@
     
     <div class="row featurette">
       <div class="col-md-7 order-md-2" data-aos="fade-left" data-aos-duration="1000">
-        <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+        <h2 class="featurette-heading">Бар «Коробок» <span class="text-muted">новое</span></h2>
+        <p class="lead">Попасть в новый бар можно через ресторан «Техникум», спустившись по той самой злосчастной лестнице.</p>
       </div>
       <div class="col-md-5 order-md-1" data-aos="fade-right" data-aos-duration="1000">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+        <img src="http://cdn.the-village.ru/the-village.ru/post_image-image/FiqIMrP29Pv76lAzeCyOVw.jpg" width="500px" height="350px">
       </div>
     </div>
 
