--- a/Logging&Registration/places.html
+++ b/Logging&Registration/places.html
@@ -21,7 +21,7 @@
           <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
           <li><a href="places.html" class="nav-link px-2 text-secondary">Places</a></li>
           <li><a href="products.html" class="nav-link px-2 text-white">Products</a></li>
-          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>
+<!--          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>-->
           <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
   
