--- a/Logging&Registration/products.html
+++ b/Logging&Registration/products.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <link href="https://lk.easynetshop.ru/frontend/v5/ens-b68bcb25.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/css/blocks/products.css">
     <title>Places</title>
 </head>
@@ -22,7 +23,7 @@
           <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
           <li><a href="places.html" class="nav-link px-2 text-white">Places</a></li>
           <li><a href="products.html" class="nav-link px-2 text-secondary">Products</a></li>
-          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>
+<!--          <li><a href="orders.html" class="nav-link px-2 text-white">Orders</a></li>-->
           <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
         </ul>
   
@@ -58,21 +59,19 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Milk</h2>
-        <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-        <p><a class="btn btn-secondary" href="#">Buy 10$</a></p>
+<!--        <p><a class="btn btn-secondary" data-rel="b68bcb25251436" href="#">Buy 10$</a></p>-->
+        <a class="btn-ens-action btn-ens-style" data-rel="b68bcb25251436">Купить</a>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Cheese</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
         <p><a class="btn btn-secondary" href="#">Buy 15$</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Bread</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">Buy 1000$</a></p>
       </div><!-- /.col-lg-4 -->
 
@@ -80,7 +79,6 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Spanch Bob</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">Buy 1000$</a></p>
       </div><!-- /.col-lg-4 -->
 
@@ -88,7 +86,6 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Pickachu</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">Buy 130$</a></p>
       </div><!-- /.col-lg-4 -->
 
@@ -96,15 +93,14 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Tvorog</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
-        <p><a class="btn btn-secondary" href="#">Buy 1$</a></p>
+        <a class="btn-ens-action btn-ens-style" data-rel="b68bcb25251439">Купить</a>
+<!--        <p><a class="btn btn-secondary" href="#">Buy 1$</a></p>-->
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Smetana</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">Buy 1500$</a></p>
       </div><!-- /.col-lg-4 -->
 
@@ -112,13 +108,15 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Yougurt</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
         <p><a class="btn btn-secondary" href="#">Buy 500$</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
   </div>
 
   <!--Scripts-->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script defer src="https://lk.easynetshop.ru/frontend/v5/ens-b68bcb25.js"></script>
+
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="../assets/js/aos.js"></script>
 </body>
