--- a/Logging&Registration/orders.html
+++ b/Logging&Registration/orders.html
@@ -49,18 +49,12 @@
         <h2 class="pb-2 mb-5 border-bottom" data-aos="fade-right">Orders</h2>
     </div>
 <!-- Orders -->
-   <div class="container py-2">
-
-    <div class="row align-items-md-stretch">
-      <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Add borders</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-          <button class="btn btn-outline-secondary" type="button">Example button</button>
-        </div>
-      </div>
+  <main class="container">
+    <div class="bg-light p-5 rounded">
+      <h1>Id #1</h1>
+      <p class="lead"></p>
     </div>
-  </div>
+  </main>
 <!-- /Orders -->
     
   <!--Scripts-->
