update shopping bin

--- a/Logging&Registration/products.html
+++ b/Logging&Registration/products.html
@@ -59,56 +59,55 @@
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Milk</h2>
-<!--        <p><a class="btn btn-secondary" data-rel="b68bcb25251436" href="#">Buy 10$</a></p>-->
-        <a class="btn-ens-action btn-ens-style" data-rel="b68bcb25251436">Купить</a>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251436" href="#">Buy 10$</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Cheese</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 15$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251440" href="#">Buy 15$</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Bread</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 1000$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251441" href="#">Buy 1000$</a></p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Spanch Bob</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 1000$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251442" href="#">Buy 1000$</a></p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Pickachu</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 130$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251443" href="#">Buy 130$</a></p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Tvorog</h2>
-        <a class="btn-ens-action btn-ens-style" data-rel="b68bcb25251439">Купить</a>
-<!--        <p><a class="btn btn-secondary" href="#">Buy 1$</a></p>-->
+<!--        <a class="btn-ens-action btn-ens-style" data-rel="b68bcb25251439">Купить</a>-->
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251439" href="#">Buy 1$</a></p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Smetana</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 1500$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251444" href="#">Buy 1500$</a></p>
       </div><!-- /.col-lg-4 -->
 
       <div class="col-lg-4" data-aos="zoom-in">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
         <h2>Yougurt</h2>
-        <p><a class="btn btn-secondary" href="#">Buy 500$</a></p>
+        <p><a class="btn-ens-action btn btn-secondary" data-rel="b68bcb25251445" href="#">Buy 500$</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
   </div>
