--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     </header>
 
     <div class="container" >
-      <h1 class="main-name" data-aos="fade-down" data-aos-duration="1500">Venori</h1>
-      <h3 class="sub-name" data-aos="fade-up" data-aos-duration="2000">Welcom to Venori</h3>
-      <p class="sub-info" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="linear">Venori is the best website for booking tables in various restaurants around the world</p>
+      <h1 class="main-name" data-aos="fade-down" data-aos-duration="1500">Olimp</h1>
+      <h3 class="sub-name" data-aos="fade-up" data-aos-duration="2000">Welcom to Olimp</h3>
+      <p class="sub-info" data-aos="fade-up" data-aos-duration="1500" data-aos-easing="linear">Olimp is the best website for booking tables in various restaurants around the world</p>
     </div>  
 
     <!--Scripts-->
